[build-system]
requires = ["setuptools", "setuptools-scm", "setuptools-rust>=1.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IM_calculation"
authors = [{ name = "QuakeCoRE" }]
description = "Intensity Measure Calculation for Ground Motion Waveforms"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "numba",
  "numpy",
  "numexpr",
  "pandas[hdf5]",
  "pyfftw",
  "scipy",
  "pint-xarray",
  "xarray[io]",
  "typer>0.12.3",
  "qcore @ git+https://github.com/ucgmsim/qcore.git",
  "tqdm>=4.67.1",
]

[tool.setuptools_scm]


[tool.setuptools]
include-package-data = true
zip-safe = false

[project.optional-dependencies]
ko_matrix = ["obspy"]
test = ["pytest", "hypothesis[numpy]", "obspy", "pytest-cov"]
types = ["pandas-stubs", "scipy-stubs"]
dev = ["deptry", "ruff", "ty", "numpydoc"]

[tool.setuptools.packages]
find = { where = [
  ".",
], include = [
  "IM",
], exclude = [
  "wiki",
  "tests",
  "src-rust",
] }


[project.scripts]
calculate-ims-ascii = "IM.scripts.calculate_ims:app"
gen-ko-matrices = "IM.scripts.gen_ko_matrix:app"

[tool.ruff.lint]
extend-select = [
  # isort imports
  "I",
  # Use r'\s+' rather than '\s+'
  "W605",
  # All the naming errors, like using camel case for function names.
  "N",
  # Missing docstrings in classes, methods, and functions
  "D101",
  "D102",
  "D103",
  "D105",
  "D107",
  # Use f-string instead of a format call
  "UP032",
  # Standard library import is deprecated
  "UP035",
  # Missing function argument type-annotation
  "ANN001",
  # Using except without specifying an exception type to catch
  "BLE001",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [
  "source_modelling",
  "workflow",
  "pygmt_helper",
  "qcore",
  "empirical",
  "nshmdb",
  "IM_calculation",
  "mera",
]

[tool.ruff.lint.per-file-ignores]
# Ignore no docstring in __init__.py
"__init__.py" = ["D104"]
# Ignore docstring errors in tests folder
"tests/**.py" = ["D"]
# Ignore the module name IM
"IM/__init__.py" = ["N999"]


[[tool.setuptools-rust.ext-modules]]
target = "IM._utils"
binding = "PyO3"


[tool.numpydoc_validation]
checks = [
  "GL05",
  "GL08",
  "GL10",
  "PR01",
  "PR02",
  "PR03",
  "PR04",
  "PR05",
  "PR06",
  "PR07",
  "RT01",
  "RT02",
  "RT03",
  "RT04",
  "YD01",
]
